# COMP_371_Project

./: .gitignore  CMakeLists.txt  README.txt
headers/: app.h  blimp.h  camera.h  light.h  mesh.h  model.h  shader.h  textureLoader.h
resources/objects/blimp_1/: Aircraft.mtl
resources/objects/road/: license.txt  scene.mtl  scene5.mtl
shaders/: fragment_shader.frag  vertex_shader.vert
src/: app.cpp  main.cpp  textureLoader.cpp
